client/src/styles/partials/_main.scss
.bg-blue {
    --bs-bg-opacity: 1;
    background-color: $blue !important;
}

.bg-gray {
    --bs-bg-opacity: 1;
    background-color: $gray-200;
}

.nav-item {
    text-transform: uppercase;
}

.nav-link.active {
    border-bottom: solid $primary 2px;
}

body {
    border-radius: var(--bs-border-radius-sm) !important;
    margin: 0.5rem !important;
    background-color: $blue !important;
}

nav-bar nav {
    border-radius: var(--bs-border-radius-sm) !important;
    margin-bottom: 0.25rem !important;
}

span.d-block.d-md-none.text-primary {
    text-transform: uppercase;
    border-bottom: solid $primary 2px;
}

